--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>القلزم</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 
 <body>
 
-    <script src="js/scripts.js"></script>
+    <script src="dist/js/scripts.js"></script>
 </body>
 
 </html>
