--- a/index.html
+++ b/index.html
@@ -6,12 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>القلزم</title>
+    <link rel="shortcut icon" href="/dist/images//favicon/favicon.ico" type="icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Katibeh&display=swap">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="dist/style.css">
 </head>
 
 <body>
+    <header class="header">
+        <div class="overlay has-fade"></div>
+        <nav class="container container--pall flex flex-jc-sb flex-ai-c">
+          <a href="/" class="header__logo"><img src="./dist/images/logo.svg" alt="logo"></a>
+          <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
+          <div class="header__links hide-for-mobile">
+            <a href="#">الرئيسية</a>
+            <a href="#">الأخبار العالمية</a>
+            <a href="#">الأخبار المحلية</a>
+            <a href="#">أخبار الرياضة</a>
+            <a href="#">التكنلوجيا</a>
+          </div>
+        </nav>
+    
+        <div class="header__menu has-fade">
+            <a href="#">الرئيسية</a>
+            <a href="#">الأخبار العالمية</a>
+            <a href="#">الأخبار المحلية</a>
+            <a href="#">أخبار الرياضة</a>
+            <a href="#">التكنلوجيا</a>
+        </div>
+    
+      </header>
 
     <script src="dist/js/scripts.js"></script>
 </body>
