add breaking news section and resolve event bubbling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,21 @@
             <a href="#">أخبار الرياضة</a>
             <a href="#">التكنلوجيا</a>
         </div>
-    
+        <div class="breaking-news-section">
+            <span id="btext">اﻷخبار العاجلة</span>
+            <marquee direction="right" onmouseover="this.stop()" onmouseout="this.start()">
+                <a href="#" class="breaking-news">
+                    <p class="bntime">time</p>
+                    الكونجرس يصادق على قانون جديد
+                </a>
+                <a href="#" class="breaking-news">
+                    <p class="bntime">time</p>عاصفة جديدة تقترب من الشواطئ الأمريكية
+                </a>
+                <a href="#" class="breaking-news">
+                    <p class="bntime">time</p>اليابان تطلق قمر صناعي جديد إلى المريخ
+                </a>
+            </marquee>
+        </div>
       </header>
 
     <script src="dist/js/scripts.js"></script>
