change breaking news line

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <marquee direction="right" onmouseover="this.stop()" onmouseout="this.start()">
                 <a href="#" class="breaking-news">
                     <p class="bntime">time</p>
-                    الكونجرس يصادق على قانون جديد
+                    محمد علي يسلم علي ويقول له هات البيرقر
                 </a>
                 <a href="#" class="breaking-news">
                     <p class="bntime">time</p>عاصفة جديدة تقترب من الشواطئ الأمريكية
