fix breaking news styles

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="overlay has-fade"></div>
+    <header >
+        <section class="header">
+            <div class="overlay has-fade"></div>
         <nav class="container container--pall flex flex-jc-sb flex-ai-c">
           <a href="/" class="header__logo"><img src="./dist/images/logo.svg" alt="logo"></a>
           <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
@@ -39,7 +40,7 @@
             <a href="#">التكنلوجيا</a>
         </div>
         <div class="breaking-news-section">
-            <span id="btext">اﻷخبار العاجلة</span>
+                <span id="btext">اﻷخبار العاجلة</span>
             <marquee direction="right" onmouseover="this.stop()" onmouseout="this.start()">
                 <a href="#" class="breaking-news">
                     <p class="bntime">time</p>
@@ -53,6 +54,7 @@
                 </a>
             </marquee>
         </div>
+        </section>
       </header>
 
     <script src="dist/js/scripts.js"></script>
