--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="/dist/images//favicon/favicon.ico" type="icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Katibeh&display=swap">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="dist/style.css">
 </head>
 
@@ -16,7 +17,7 @@
     <header >
         <section class="header">
             <div class="overlay has-fade"></div>
-        <nav class="container container--pall flex flex-jc-sb flex-ai-c">
+        <nav class="my-container my-container--pall flex flex-jc-sb flex-ai-c">
           <a href="/" class="header__logo"><img src="./dist/images/logo.svg" alt="logo"></a>
           <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
             <span></span>
@@ -56,6 +57,49 @@
         </div>
         </section>
       </header>
+
+      <section class="container">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/dist/images/1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>الفئة</h5>
+                    <p>العنوان</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/dist/images/2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>الفئة</h5>
+                    <p>العنوان</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/dist/images/3.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>الفئة</h5>
+                  <p>العنوان</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </section>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <script src="dist/js/scripts.js"></script>
 </body>
