--- a/index.html
+++ b/index.html
@@ -58,54 +58,85 @@
         </section>
       </header>
 
-      <section class="container ">
-          <div id="carouselHero" class="carouselHero">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/dist/images/1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>الفئة</h5>
-                        <p>العنوان</p>
+      <article class="popular-news">
+        <div class="featured">
+            <h2 class="thumbnail-headings">آخر اﻷخبار</h2>
+            <section class="popular-news-carousel">
+                <div id="carouselHero" class="carouselHero">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/dist/images/1.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>الفئة</h5>
+                                <p>العنوان</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/dist/images/2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>الفئة</h5>
+                                <p>العنوان</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/dist/images/3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>الفئة</h5>
+                            <p>العنوان</p>
+                            </div>
+                        </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="/dist/images/2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>الفئة</h5>
-                        <p>العنوان</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="/dist/images/3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                    <h5>الفئة</h5>
-                    <p>العنوان</p>
-                    </div>
-                </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+            </section>
         </div>
-          <!-- <div class="other">
-            <img src="/dist/images/1.jpg" alt="">
-            <img src="/dist/images/2.jpg" alt="">
-            <img src="/dist/images/3.jpg" alt="">
-            <img src="/dist/images/2.jpg" alt="">
-          </div> -->
-      </section>
+
+        <div id="latest">
+            <h2 class="thumbnail-headings">الاقتصاد</h2>
+            <section class="news">
+                <div class="news-container">
+                    <img src="/dist/images/3.jpg">
+                    <p class="carousel-text">لكن لا بد أن أوضح لك أن كل هذه الأفكار المغلوطة حول استنكار النشوة وتمجيد الألم نشأت بالفعل،</p>
+                </div>
+            </section>
+            <section class="news">
+                <div class="news-container">
+                    <img src="/dist/images/3.jpg">
+                    <p class="carousel-text">تنكر هؤلاء الرجال المفتونون بنشوة اللحظة الهائمون في</p>
+                </div>
+            </section>
+        </div>
+        <div id="our-picks">
+            <h2 class="thumbnail-headings">الرياضة</h2>
+            <section class="news">
+                <div class="news-container">
+                    <img src="/dist/images/3.jpg">
+                    <p class="carousel-text"> الرجال المفتونون بنشوة اللحظة الهائمون في رغباتهم فلا يدركون ما يعقبها من الألم والأسي المحتم، </p>
+                </div>
+            </section>
+            <section class="news">
+                <div class="news-container">
+                    <img src="/dist/images/3.jpg">
+                    <p class="carousel-text">لكن لا بد أن أوضح لك أن كل هذه الأفكار المغلوطة حول استنكار النشوة وتمجيد الألم نشأت بالفعل،</p>
+                </div>
+            </section>
+        </div>
+
+        </article>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
