--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
                         <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="/dist/images/1.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption  d-md-block">
                                 <h5>الفئة</h5>
                                 <p>العنوان</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="/dist/images/2.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption  d-md-block">
                                 <h5>الفئة</h5>
                                 <p>العنوان</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="/dist/images/3.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption  d-md-block">
                             <h5>الفئة</h5>
                             <p>العنوان</p>
                             </div>
