add sidebar news cards

--- a/index.html
+++ b/index.html
@@ -523,7 +523,53 @@
                         <!-- sidebar news cards start -->
                         <div class="widget">
                             <h3 class="widget-title">ثقافة وعلوم</h3>
-                            <div class="widget-content">
+                            <div class="cards">
+                                <a href="#" class="card">
+                                    <div class="card__image" style="background-image: url('/dist/images/1.jpg');"></div>
+                                    <div class="card__content">
+                                        <div class="card__title">منطقية فيعرضهم هذا لمواجهة الظروف الأليمة</div>
+                                        <div class="card__snippet">من منا لم يتحمل جهد بدني شاق إلا من أجل الحصول على ميزة أو فائدة؟ ولكن من لديه الحق أن ينتقد شخص ما أراد أن يشعر بالسعادة
+                                        </div>
+                                        <div class="card__readmore">أكمل القراءة</div>
+                                    </div>
+                                </a>
+
+                                <a href="#" class="card">
+                                    <div class="card__image" style="background-image: url('/dist/images/2.jpg');"></div>
+                                    <div class="card__content">
+                                        <div class="card__title">منطقية فيعرضهم هذا لمواجهة الظروف الأليمة</div>
+                                        <div class="card__snippet">من منا لم يتحمل جهد بدني شاق إلا من أجل الحصول على ميزة 
+                                        </div>
+                                        <div class="card__readmore">أكمل القراءة</div>
+                                    </div>
+                                </a>
+                                
+                            </div>
+                        </div>
+
+                         <!-- sidebar news cards start -->
+                         <div class="widget">
+                            <h3 class="widget-title">منوعات </h3>
+                            <div class="cards">
+                                <a href="#" class="card">
+                                    <div class="card__image" style="background-image: url('/dist/images/1.jpg');"></div>
+                                    <div class="card__content">
+                                        <div class="card__title">منطقية فيعرضهم هذا لمواجهة الظروف الأليمة</div>
+                                        <div class="card__snippet">من منا لم يتحمل جهد بدني شاق إلا من أجل الحصول على ميزة أو فائدة؟ ولكن من لديه الحق أن ينتقد شخص ما أراد أن يشعر بالسعادة
+                                        </div>
+                                        <div class="card__readmore">أكمل القراءة</div>
+                                    </div>
+                                </a>
+
+                                <a href="#" class="card">
+                                    <div class="card__image" style="background-image: url('/dist/images/2.jpg');"></div>
+                                    <div class="card__content">
+                                        <div class="card__title">منطقية فيعرضهم هذا لمواجهة الظروف الأليمة</div>
+                                        <div class="card__snippet">من منا لم يتحمل جهد بدني شاق إلا من أجل الحصول على ميزة أو فائدة؟ ولكن من لديه الحق أن ينتقد شخص ما أراد أن يشعر بالسعادة
+                                        </div>
+                                        <div class="card__readmore">أكمل القراءة</div>
+                                    </div>
+                                </a>
                                 
                             </div>
                         </div>
