refactoring articles style

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                             </div>
                         </div> <!-- Cultural and Science news end -->
 
-                         <!-- Mecilenious news start -->
+                         <!-- Miscellaneous news start -->
                          <div class="block-container mt-5">
                             <h3 class="block-title">
                                 <span>منوعات </span>
@@ -391,7 +391,7 @@
                                 </a>
                                 
                             </div>
-                        </div> <!-- Mecilenious news end -->
+                        </div> <!-- Miscellaneous news end -->
 
                 </div> <!-- Main content end -->
                 <!-- sidebar start  -->
