add categories list widget

--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
                     </div>
                     </div> <!-- Mecilenious news end -->
 
+                    <!-- authors list start -->
+                    <!-- authors list end -->
                 </div> <!-- Main content column end -->
                 
                 <!-- sidebar content column start -->
@@ -647,6 +649,25 @@
                                </div> 
                             </div>
                         </div> <!-- sidebar tags widget end -->
+
+                        <!-- sidebar category widget start -->
+                        <div class="widget">
+                            <h3 class="widget-title">الفئات</h3>
+                            <div class="widget-content">
+                                <div class="categories">
+                                    <ul>
+                                        <li>سياسة<span>65</span></li>
+                                        <li>إقتصاد<span>35</span></li>
+                                        <li>رياضة<span>34</span></li>
+                                        <li>التكنلوجيا<span>25</span></li>
+                                        <li>ثقافة وعلوم<span>40</span></li>
+                                        <li>منوعات<span>43</span></li>
+                                        <li>القرن الإفريقي<span>55</span></li>
+                                        <li>العالم<span>48</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div> <!-- sidebar category widget end -->
                     </div> <!-- sidebar end-->
                 </div>  <!-- sidebar content column start -->
             </div> <!--Main row end-->
