edit sidebar css comment authors section

--- a/index.html
+++ b/index.html
@@ -654,14 +654,14 @@
                             <div class="widget-content">
                                 <div class="categories">
                                     <ul>
-                                        <li>سياسة<span>65</span></li>
-                                        <li>إقتصاد<span>35</span></li>
-                                        <li>رياضة<span>34</span></li>
-                                        <li>التكنلوجيا<span>25</span></li>
-                                        <li>ثقافة وعلوم<span>40</span></li>
-                                        <li>منوعات<span>43</span></li>
-                                        <li>القرن الإفريقي<span>55</span></li>
-                                        <li>العالم<span>48</span></li>
+                                        <li><a href="#"> سياسة</a><span>65</span></li>
+                                        <li><a href="#"> إقتصاد</a><span>35</span></li>
+                                        <li><a href="#"> رياضة</a><span>34</span></li>
+                                        <li><a href="#"> التكنلوجيا</a><span>25</span></li>
+                                        <li><a href="#"> ثقافة وعلوم</a><span>40</span></li>
+                                        <li><a href="#"> منوعات </a><span>43</span></li>
+                                        <li><a href="#"> القرن الإفريقي</a><span>55</span></li>
+                                        <li><a href="#"> العالم</a><span>48</span></li>
                                     </ul>
                                 </div>
                             </div>
@@ -670,7 +670,7 @@
                 </div>  <!-- sidebar content column start -->
             </div> <!--Main row end-->
             <!-- authors list start -->
-            <div class="block-container mt-5">
+            <!-- <div class="block-container mt-5">
                 <h3 class="block-title">
                     <span>كتاب القلزم </span>
                 </h3>
@@ -719,7 +719,7 @@
                         
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- authors list end -->
         </div> <!-- Container end -->
     </section>
