--- a/index.html
+++ b/index.html
@@ -65,33 +65,33 @@
             <section class="popular-news-carousel">
                 <div id="carouselHero" class="carouselHero">
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
+                        <!-- <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        </div>
+                        </div> -->
                         <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/dist/images/1.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption  d-md-block">
+                            <div class="carousel-item active">
+                                <img src="/dist/images/1.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption  d-md-block">
+                                    <h5>الفئة</h5>
+                                    <p>لكن لا بد أن أوضح لك أن كل هذه الأفكار المغلوطة </p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/dist/images/2.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption  d-md-block">
+                                    <h5>الفئة</h5>
+                                    <p>لكن لا بد أن أوضح لك أن كل هذه الأفكار المغلوطة حول استنكار النشوة وتمجيد الألم</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/dist/images/3.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption  d-md-block">
                                 <h5>الفئة</h5>
-                                <p>العنوان</p>
+                                <p>لكن لا بد أن أوضح لك أن كل هذه الأفكار المغلوطة حول استنكار النشوة وتمجيد الألم</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/dist/images/2.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption  d-md-block">
-                                <h5>الفئة</h5>
-                                <p>العنوان</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/dist/images/3.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption  d-md-block">
-                            <h5>الفئة</h5>
-                            <p>العنوان</p>
-                            </div>
-                        </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -730,8 +730,8 @@
                 <h2>من نحن</h2>
                 <p>هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر إدخال بعض النوادر أو الكلمات العشوائية إلى النص. إن كنت تريد أن تستخدم نص لوريم إيبسوم ما، عليك أن تتحقق أولاً أن ليس هناك أي كلمات أو عبارات محرجة أو غير لائقة مخبأة في هذا النص. بينما تعمل جميع،</p>
                 <ul class="footer-social-icons">
-                    <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/QolzumNews" target="_blank"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/QolzumNews" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fas fa-rss" aria-hidden="true"></i></a></li>
                 </ul>
