add pages markup

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </a>
           <div class="header__links hide-for-mobile">
             <a href="#">الرئيسية</a>
-            <a href="#">الأخبار العالمية</a>
+            <a href="/pages.html">الأخبار العالمية</a>
             <a href="#">الأخبار المحلية</a>
             <a href="#">أخبار الرياضة</a>
             <a href="#">التكنلوجيا</a>
