add latest news widget to the pages template

--- a/pages.html
+++ b/pages.html
@@ -13,7 +13,7 @@
         <div class="container mt-2">
             <div class="row">
               <div class="col-8">
-                  <div class="page__main-section">
+                  <div class="page__main-section my-container--px">
                       <h1 class="page__title">العنوان</h1>
                       <div class="page__image" style="background-image: url('/dist/images/3.jpg');"></div>
                       <div class="page__content">
@@ -24,7 +24,92 @@
                       </div>
                   </div>
               </div>
-              <div class="col-4">col-4</div>
+              <div class="col-4">
+                <!-- most recet widget start -->
+                <div class="widget">
+                    <h3 class="widget-title">آخر اﻷخبار</h3>
+                    <div class="widget-content">
+                        <ul class="latest-news">
+                            <li>
+                                <div class="latest-news-item clearfix">
+                                    <div class="item-thumbnail">
+                                        <a href="#">
+                                            <img src="/dist/images/1.jpg" class="latest-news-img" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="news-item-container">
+                                        <h2 class="news-title">العنوان</h2>
+                                        <p class="news-exerpt">
+                                            وسأعرض لك التفاصيل لتكتشف حقيقة وأساس تلك السعادة البشرية، فلا أحد يرفض أو يكره أو يتجنب الشعور بالسعادة،
+                                        </p>
+                                        <div class="news-meta"> 
+                                           <span class="news-date"> 21 يوليو 2021م </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="latest-news-item clearfix">
+                                    <div class="item-thumbnail">
+                                        <a href="#">
+                                            <img src="/dist/images/1.jpg" class="latest-news-img" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="news-item-container">
+                                        <h2 class="news-title">العنوان</h2>
+                                        <p class="news-exerpt">
+                                            وسأعرض لك التفاصيل لتكتشف حقيقة وأساس تلك السعادة البشرية، فلا أحد يرفض أو يكره أو يتجنب الشعور بالسعادة،
+                                        </p>
+                                        <div class="news-meta"> 
+                                           <span class="news-date"> 21 يوليو 2021م </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="latest-news-item clearfix">
+                                    <div class="item-thumbnail">
+                                        <a href="#">
+                                            <img src="/dist/images/1.jpg" class="latest-news-img" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="news-item-container">
+                                        <h2 class="news-title">العنوان</h2>
+                                        <p class="news-exerpt">
+                                            وسأعرض لك التفاصيل لتكتشف حقيقة وأساس تلك السعادة البشرية، فلا أحد يرفض أو يكره أو يتجنب الشعور بالسعادة،
+                                        </p>
+                                        <div class="news-meta"> 
+                                           <span class="news-date"> 21 يوليو 2021م </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="latest-news-item clearfix">
+                                    <div class="item-thumbnail">
+                                        <a href="#">
+                                            <img src="/dist/images/1.jpg" class="latest-news-img" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="news-item-container">
+                                        <h2 class="news-title">العنوان</h2>
+                                        <p class="news-exerpt">
+                                            وسأعرض لك التفاصيل لتكتشف حقيقة وأساس تلك السعادة البشرية، فلا أحد يرفض أو يكره أو يتجنب الشعور بالسعادة،
+                                        </p>
+                                        <div class="news-meta"> 
+                                           <span class="news-date"> 21 يوليو 2021م </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>   <!-- most recet widget start -->
+              </div>
             </div>
         </div>
     </div>
