link posts to index page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="header__links hide-for-mobile">
             <a href="#">الرئيسية</a>
             <a href="/pages.html">الأخبار العالمية</a>
-            <a href="#">الأخبار المحلية</a>
+            <a href="/posts.html">الأخبار المحلية</a>
             <a href="#">أخبار الرياضة</a>
             <a href="#">التكنلوجيا</a>
           </div>
