solve href in mobile view

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     
         <div class="header__menu has-fade">
             <a href="#">الرئيسية</a>
-            <a href="#">الأخبار العالمية</a>
-            <a href="#">الأخبار المحلية</a>
+            <a href="/pages.html">الأخبار العالمية</a>
+            <a href="/posts.html">الأخبار المحلية</a>
             <a href="#">أخبار الرياضة</a>
             <a href="#">التكنلوجيا</a>
         </div>
