--- a/posts.html
+++ b/posts.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="page"> <!--page div start-->
-        <div class="container mt-2"> <!--main container start-->
+        <div class="container page__container mt-2"> <!--main container start-->
             <div class="row"> <!--main row start-->
               <div class="col-8"> <!-- col-4 start -->
                   <div class="page__main-section my-container--px">
